# steadfast-consumption

./: .flaskenv  README.md  TODO  main.py  pyproject.toml
steadfast_consumption/: views.py
steadfast_consumption/generators/: __init__.py  common.py  slasher.py
steadfast_consumption/static/: sequencer.js
steadfast_consumption/templates/: base.html  index.html  player.html
